--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     </header>
 
     <main>
-        <div style="position: relative;">
+        <div>
             <img src="55937-original (1).jpg" style="width: 100%; height: 405px;" alt="Grandparents">
-            <div class="position">
-                <p>It's time to take your life under control</p>
-            </div>
+            
         </div>
 
 
