--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project1</title>
     <link href="/file.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,6 @@
 <body>
     <header>
         <ul class="menu">
-           
             <li style="margin-left: 200px; font-size: large; font-weight: bold;">Hypnosis</li>
             <li style="margin-left: 240px;"><a href="">Home</a></li>
             <li style="margin-left: 50px;"><a href="">Services</a></li>
