--- a/index.html
+++ b/index.html
@@ -13,42 +13,54 @@
         href="https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Festive&family=Redressed&family=Roboto+Condensed&family=Roboto:ital,wght@0,100;1,100&family=Syne+Tactile&display=swap"
         rel="stylesheet">
 
+
 </head>
 
 <body>
     <header>
+
         <ul class="menu">
-            <li style="margin-left: 200px; font-size: large; font-weight: bold;">Hypnosis</li>
-            <li style="margin-left: 240px;"><a href="">Home</a></li>
-            <li style="margin-left: 50px;"><a href="">Services</a></li>
-            <li style="margin-left: 50px;"><a href="">Training courses</a></li>
-            <li style="margin-left: 50px;"><a href="">Blog</a></li>
-            <li style="margin-left: 50px;"><a href="">Contacts</a></li>
+            <li style="margin-left: 180px; font-weight: bold; font-size: 20px;font-family: Roboto , sans-serif;">
+                Hypnosis</li>
+            <li style="margin-left: 220px;"><a href="">Home</a></li>
+            <li style="margin-left: 30px;"><a href="">Services</a></li>
+            <li style="margin-left: 30px;"><a href="">Training courses</a></li>
+            <li style="margin-left: 30px;"><a href="">Blog</a></li>
+            <li style="margin-left: 30px;"><a href="">Contacts</a></li>
         </ul>
     </header>
 
     <main>
-        <div>
-            <img src="55937-original (1).jpg" style="width: 100%; height: 405px;" alt="Grandparents">
-            
+
+        <div style="background-image: url(/starichki.jpg); width: 100%; height: 405px; background-repeat: no-repeat; display: flex;"
+            alt="Grandparents">
+            <div class="main">
+                    <p class="text">It's time to take your life under control!</p>
+            </div>
         </div>
 
 
         <div class="box">
-            <div class="little_box" style="color: white; text-align: left; padding-left: 5px;">Lack of sleep </br> 
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, adipisci? Voluptates aliquid, commodi cum deserunt.</p>
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+            <div class="little_box note" style="color: white; text-align: left; padding-left: 5px;">Lack of sleep </br>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facere, adipisci? Voluptates aliquid, commodi cum deserunt.</p>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                </p>
             </div>
-            <div class="little_box" style="color: white; text-align: left; padding-left: 5px;">Quit Smoking </br> 
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, adipisci? Voluptates aliquid, commodi cum deserunt.</p>
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+            <div class="little_box note" style="color: white; text-align: left; padding-left: 5px;">Quit Smoking </br>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facere, adipisci? Voluptates aliquid, commodi cum deserunt.</p>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                </p>
             </div>
-            <div class="little_box" style="color: white; text-align: left; padding-left: 5px;">Stress Options</br> 
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, adipisci? </p>
+            <div class="little_box note" style="color: white; text-align: left; padding-left: 5px;">Stress Options</br>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facere, adipisci? </p>
                 <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur. </p>
             </div>
-            <div class="little_box" style="color: white; text-align: left; padding-left: 5px;">Health Options</br> 
-                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, adipisci? </p>
+            <div class="little_box note" style="color: white; text-align: left; padding-left: 5px;">Health Options</br>
+                <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facere, adipisci? </p>
                 <p style="font-size: 10px; padding-left: 5px;">Lorem ipsum dolor sit amet consectetur. </p>
             </div>
         </div>
@@ -61,20 +73,27 @@
     padding: 0;">
             <div class='little_box3'
                 style="background-image: url(/55937-original\ \(2\).jpg); background-size: cover; background-repeat: no-repeat; padding: 10px;">
-                
+
             </div>
             <div class='little_box3' style="background-color: white; padding: 10px;">
-                <span style="font-size: 20px; color: rgb(146, 170, 37); text-align: left;">Lorem ipsum dolor sit amet consectetur
+                <span style="font-size: 20px; color: rgb(146, 170, 37); text-align: left;">Lorem ipsum dolor sit amet
+                    consectetur
                     adipisicing elit. </span> </br>
-                <p style="font-size: 13px; color: black; text-align: left; text-align: left;"> Lorem ipsum dolor, sit amet consectetur
+                <p style="font-size: 13px; color: black; text-align: left; text-align: left;"> Lorem ipsum dolor, sit
+                    amet consectetur
                     adipisicing elit. Officia sint minima perferendis animi fugiat saepe reiciendis sed. </p>
-                <p style="font-size: 13px; color: black; text-align: left; text-align: left;"> Lorem ipsum dolor, sit amet consectetur
+                <p style="font-size: 13px; color: black; text-align: left; text-align: left;"> Lorem ipsum dolor, sit
+                    amet consectetur
                     adipisicing elit. Officia sint minima perferendis animi fugiat saepe reiciendis sed. </p>
             </div>
         </div>
 
-
-        <img src="/55937-original (3).jpg" style="width: 100%; height: 405px;" alt="Girl">
+        <div style="background-image: url(/girl.jpg); width: 100%; height: 405px; background-repeat: no-repeat; display: flex;"
+            alt="Grandparents">
+            <div class="main" style="margin-left: 3%;">
+                    <p class="text">Hypnosis-Used Around the World</p>
+            </div>
+        </div>
 
 
         <div class="container2">
@@ -158,20 +177,20 @@ text-align: center;"><b style="color: rgb(71, 83, 15); ;">What to know more abou
 
 
         <div class="box" style="background-color: white;">
-            <div class="little_box" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img src="person1.jpg"
-                    alt="person1" class="round" style="width: 52px; height: 50px; float: left;"> <span
+            <div class="little_box note2" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img
+                    src="person1.jpg" alt="person1" class="round" style="width: 52px; height: 50px; float: left;"> <span
                     style="color: white;">Ut Enim Minim </span> </br>
                 <p style="font-size: 12px; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nesciunt, soluta? </p>
             </div>
-            <div class="little_box" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img src="person2.jpg"
-                    alt="person2" class="round" style="width: 52px; height: 50px; float: left; "><span
+            <div class="little_box note2" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img
+                    src="person2.jpg" alt="person2" class="round" style="width: 52px; height: 50px; float: left; "><span
                     style="color: white;">Ut Enim Minim </span></br>
                 <p style="font-size: 12px; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nesciunt, soluta? </p>
             </div>
-            <div class="little_box" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img src="person3.jpg"
-                    alt="person3" class="round" style="width: 52px; height: 50px; float: left; "><span
+            <div class="little_box note2" style="width: 200px; padding-left: 5px; padding-top: 5px;"><img
+                    src="person3.jpg" alt="person3" class="round" style="width: 52px; height: 50px; float: left; "><span
                     style="color: white;">Ut Enim Minim </span></br>
                 <p style="font-size: 12px; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nesciunt, soluta? </p>
@@ -184,33 +203,35 @@ text-align: center;"><b style="color: rgb(71, 83, 15); ;">What to know more abou
             <div class="little_box" style=" height: 200px; background-color: whitesmoke;">
                 <p style="text-align: left; font-size: 20px; font-weight: 800; text-transform: uppercase;">Navigation
                 </p>
-                <p style="text-align: left; font-size: 15px;">Home</p>
-                <p style="text-align: left; font-size: 15px;">Services</p>
-                <p style="text-align: left; font-size: 15px;">Training Courses</p>
-                <p style="text-align: left; font-size: 15px;">Blog</p>
-                <p style="text-align: left; font-size: 15px;">Contacts</p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Home</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Services</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Training
+                        Courses</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Blog</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Contacts</a></p>
 
             </div>
             <div class="little_box" style="height: 200px; background-color: whitesmoke;">
                 <p style="text-align: left; font-size: 20px; font-weight: 800; text-transform: uppercase;">For members
                 </p>
-                <p style="text-align: left; font-size: 15px;">Forums</p>
-                <p style="text-align: left; font-size: 15px;">Promotions</p>
-                <p style="text-align: left; font-size: 15px;">Sign in</p>
-                <p style="text-align: left; font-size: 15px;">News</p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Forums</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Promotions</a>
+                </p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">Sign in</a></p>
+                <p style="text-align: left; font-size: 15px;"><a href='' style="text-decoration: none;">News</a></p>
 
             </div>
             <div class="little_box" style=" height: 200px; background-color: whitesmoke;">
                 <p style="text-align: left; font-size: 20px; font-weight: 800; text-transform: uppercase;">Follow us</p>
                 <p style="text-align: left; font-size: 15px;"><img
                         src="/png-transparent-facebook-icon-like-button-facebook-icon-blue-text-rectangle.png"
-                        width="20px">Facebook</p>
+                        width="20px"><a href='' style="text-decoration: none;">Facebook</a></p>
                 <p style="text-align: left; font-size: 15px;"><img
                         src="/kisspng-computer-icons-clip-art-twitter-5ac641af2b1e48.4161461015229423831766.jpg"
-                        width="20px">Twitter</p>
+                        width="20px"><a href='' style="text-decoration: none;">Twitter</a></p>
                 <p style="text-align: left; font-size: 15px;"><img
                         src="/png-transparent-computer-icons-rss-web-feed-blue-rss-feeds-logo-icon-miscellaneous-rss-internet.png"
-                        width="30px">Rss</p>
+                        width="30px"><a href='' style="text-decoration: none;">Rss</a></p>
             </div>
             <div class="little_box" style=" height: 200px; background-color: whitesmoke;">
                 <p style="text-align: left; font-size: 20px; font-weight: 800; text-transform: uppercase;">Our Location
